bugs=squished

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
-
+  }
 
   
   /* edited version for all components for modal */
@@ -84,11 +84,8 @@
   flex-direction: column;
   }
   
-  #card-container {
-
-
-
-#play-again {
+  
+  #play-again {
     background-color:#f8f191f1;
     border: 0;
     border-radius: 5px;
@@ -99,23 +96,26 @@
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-}
-
-/* added flex class to class-container */
-/* created grid layout using columns */
-
-
-
-
-
-  --gap: 20px;
-  gap: var(--gap);
-  flex-wrap: wrap;
-  padding: 15px;
-
-  justify-content: center;
-  align-items: center;
   }
+  
+  /* added flex class to class-container */
+  /* created grid layout using columns */
+  
+  
+  #card-container {
+    --gap: 20px;
+    gap: var(--gap);
+    flex-wrap: wrap;
+    padding: 15px;
+  
+    justify-content: center;
+    align-items: center;
+
+  }
+
+
+
+  
   /* 4 8 16 32*/
   
   .card {
